---
title: thorest_thor_fees
---
classDiagram
    namespace core_vcdm {
        class Hex
    }
    namespace thorest {
        class ThorRequest {
            <<interface>>
        }
    }
    namespace thorest_errors {
        class ThorError
    }
    namespace thorest_model {
        class Tx
    }
    class GetPeersResponse {
        GetPeersResponseJSON toJSON()
    }
    class GetTxPoolStatus {
        GetTxPoolStatus of()$
        ThorResponse~GetTxPoolStatus, Status~askTo(HttpClient httpClient)
    }
    class PeerStat {
        string name
        Hex bestBlockID
        number totalScore
        Hex peerID
        NetAddr netAddr
        boolean inbound
        number duration
        PeerStatJSON toJSON()
    }
    class RetrieveConnectedPeers {
        RetrieveConnectedPeers of()$
        ThorResponse~RetrieveConnectedPeers, GetPeersResponse|null~ askTo(HttpClient httpClient)
    }
    class Status {
        number total
        StatusJSON toJSON()
    }
    class TransactionIDs {
        TransactionIDsJSON toJSON()
    }
    class Transactions {
        TransactionsJSON toJSON()
    }
    GetPeersResponse "array" --|> PeerStat
    Transactions "array" --|> Tx
    TransactionIDs "array" --|> Hex
    ThorRequest <|.. GetTxPoolStatus
    ThorRequest <|.. RetrieveConnectedPeers
    GetTxPoolStatus "askTo" --> Status
    RetrieveConnectedPeers "askTo" --> GetPeersResponse
    ThorError <-- "throws" ThorRequest
